force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Org_or_Agency_name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Org_or_Agency_name__c</fullName>
    <label>Secondary Org or Agency name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>