force-app/main/default/objects/Group_Booking__c/fields/Send_No_Show_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_No_Show_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends an email to the booking parties to inform them that they were a &apos;No Show&apos;</description>
    <inlineHelpText>Sends an email to the booking parties to inform them that they were a &apos;No Show&apos; (Caution: this will send an email)</inlineHelpText>
    <label>Send No Show Email</label>
    <type>Checkbox</type>
</CustomField>