force-app/main/default/objects/Group_Booking__c/fields/Time_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Arrival__c</fullName>
    <inlineHelpText>Please enter the time of arrival using the 24 hour clock in the format 00.00</inlineHelpText>
    <label>Time of Arrival</label>
    <length>5</length>
    <type>Text</type>
</CustomField>