force-app/main/default/objects/Group_Booking__c/fields/Time_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Departure__c</fullName>
    <inlineHelpText>Please enter the departure date using the 24 hour clock in the format 00.00</inlineHelpText>
    <label>Time of Departure</label>
    <length>5</length>
    <type>Text</type>
</CustomField>