force-app/main/default/objects/Group_Booking__c/fields/Tour_Leader_Driver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tour_Leader_Driver_Contact__c</fullName>
    <inlineHelpText>Enter the contact telephone number of the Tour Leader or Driver</inlineHelpText>
    <label>Tour Leader / Driver Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>