force-app/main/default/objects/Group_Booking__c/fields/Tour_Leader_or_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Tour_Leader_or_Driver_Name__c</fullName>
    <inlineHelpText>Enter the name of the Tour Leader or Driver</inlineHelpText>
    <label>Tour Leader or Driver Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>