force-app/main/default/objects/Group_Booking__c/fields/Transport_Required__c.field-meta.xml
<CustomField>
    <fullName>Transport_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether transport to/from the village will need to be arranged</inlineHelpText>
    <label>Transport Required</label>
    <type>Checkbox</type>
</CustomField>