force-app/main/default/objects/Group_Booking__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipName>Bookings_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>