force-app/main/default/objects/Group_Booking__c/fields/Village_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Village_of_Visit__c</fullName>
    <formula>Village__r.Name</formula>
    <label>Village of Visit</label>
    <type>Text</type>
</CustomField>