force-app/main/default/objects/Group_Booking__c/fields/VIP_Lounge_Access__c.field-meta.xml
<CustomField>
    <fullName>VIP_Lounge_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Lounge Access</label>
    <type>Checkbox</type>
</CustomField>