force-app/main/default/objects/Group_Booking__c/fields/Visitor_Estimated_Revenue_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Estimated_Revenue_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search for &quot;GS&quot; in the lookup</inlineHelpText>
    <label>Visitor Estimated Revenue Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Group_Source__c.Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Group_Source__c.Village__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Village__c</valueField>
        </filterItems>
        <infoMessage>Please search for Domestic, EU or Long Haul, or just select from the list of recent options below.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Group_Source__c</referenceTo>
    <relationshipLabel>Bookings/Partnerships</relationshipLabel>
    <relationshipName>Group_Booking_Information</relationshipName>
    <type>Lookup</type>
</CustomField>