force-app/main/default/objects/Group_Booking__c/fields/VR_Representative__c.field-meta.xml
<CustomField>
    <fullName>VR_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for reporting purposes, this will track which AVIA/GULF rep was responsible for the Group Booking.</description>
    <inlineHelpText>Enter the AVIA/GULF rep attributed to the group booking</inlineHelpText>
    <label>VR Rep Office</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Select the VR Rep responsible for this Booking/Partnership</errorMessage>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Tourism Consultant - SP</value>
        </filterItems>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Tourism Consultant</value>
        </filterItems>
        <infoMessage>Select an AVIA/GULF Rep</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Group_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>