force-app/main/default/objects/Group_Booking__c/fields/Was_Quick_Converted__c.field-meta.xml
<CustomField>
    <fullName>Was_Quick_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Quick Converted</label>
    <type>Checkbox</type>
</CustomField>