force-app/main/default/objects/Group_Booking__c/fields/Welcome_Pack__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Pack__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do the guests require a welcome pack?</inlineHelpText>
    <label>Welcome Pack</label>
    <type>Checkbox</type>
</CustomField>