force-app/main/default/objects/Group_Booking__c/recordTypes/Group_Booking.recordType-meta.xml
<RecordType>
    <fullName>Group_Booking</fullName>
    <active>true</active>
    <description>A booking for a fixed date/time that a group of guests are scheduled to arrive</description>
    <label>Group Booking</label>
</RecordType>