force-app/main/default/objects/Group_Booking__c/recordTypes/Groups_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Groups_Partnership</fullName>
    <active>true</active>
    <description>An agreement with a partner who bring many groups of guests to a village, without the need to pre-book before each arrival</description>
    <label>Groups Partnership</label>
</RecordType>