force-app/main/default/objects/Group_Booking__c/recordTypes/Individuals_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Individuals_Partnership</fullName>
    <active>false</active>
    <description>(redundant) Represents an agreement with a partner to bring individuals into the village</description>
    <label>Individuals Partnership</label>
</RecordType>