force-app/main/default/objects/Group_Booking__c/validationRules/Block_untick_of_transfer_redemptions.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_untick_of_transfer_redemptions</fullName>
    <active>true</active>
    <errorConditionFormula>Transfer_Redemptions_Now__c = false
&amp;&amp;  PRIORVALUE(Transfer_Redemptions_Now__c) = true
&amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Transfer_Redemptions_Now__c</errorDisplayField>
    <errorMessage>You cannot un-tick the transfer Redemptions Now flag once set</errorMessage>
</ValidationRule>