force-app/main/default/objects/Group_Booking__c/validationRules/ConfirmedBookings_Must_have_Est_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmedBookings_Must_have_Est_Revenue</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( Status__c) != &quot;Proposed&quot; 
&amp;&amp; TEXT( Status__c) != &quot;Cancelled&quot; 
&amp;&amp; Visitor_Estimated_Revenue_Lookup__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Visitor_Estimated_Revenue_Lookup__c</errorDisplayField>
    <errorMessage>Confirmed bookings must have an estimated revenue set</errorMessage>
</ValidationRule>