force-app/main/default/objects/Group_Booking__c/validationRules/Group_source_must_match_Visiting_Village.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_source_must_match_Visiting_Village</fullName>
    <active>false</active>
    <description>This validation checks the group source against the village</description>
    <errorConditionFormula>Village__r.Name  !=  Visitor_Estimated_Revenue_Lookup__r.Village__r.Name
&amp;&amp;  NOT(ISBLANK(Visitor_Estimated_Revenue_Lookup__c))</errorConditionFormula>
    <errorDisplayField>Visitor_Estimated_Revenue_Lookup__c</errorDisplayField>
    <errorMessage>The Visitor Estimated Revenue Lookup must match the Village of Visit</errorMessage>
</ValidationRule>