force-app/main/default/objects/Group_Booking__c/listViews/All_Village_Proposed_Group_Bookings.listView-meta.xml
<ListView>
    <fullName>All_Village_Proposed_Group_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Organisation__c</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Group_Type__c</columns>
    <columns>Visitors_Country_of_Origin__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Arrival__c</columns>
    <columns>Number_of_Visitors_Expected__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Proposed</value>
    </filters>
    <filters>
        <field>Expected_Arrival__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>All Village Proposed Group Bookings</label>
    <language>en_US</language>
</ListView>