force-app/main/default/objects/Group_Booking__c/listViews/Bicester_Group_Bookings_for_tomorrow.listView-meta.xml
<ListView>
    <fullName>Bicester_Group_Bookings_for_tomorrow</fullName>
    <columns>NAME</columns>
    <columns>Organisation__c</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Group_Type__c</columns>
    <columns>Visitors_Country_of_Origin__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Arrival__c</columns>
    <columns>Number_of_Visitors_Expected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Proposed,Confirmed,Completed</value>
    </filters>
    <filters>
        <field>Expected_Arrival__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>Village_of_Visit__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Bicester Group Bookings for tomorrow</label>
    <language>en_US</language>
</ListView>