force-app/main/default/objects/Group_Booking__c/listViews/Bicester_Open_Group_Bookings3.listView-meta.xml
<ListView>
    <fullName>Bicester_Open_Group_Bookings3</fullName>
    <columns>NAME</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Group_Type__c</columns>
    <columns>Expected_Arrival__c</columns>
    <columns>Visitors_Country_of_Origin__c</columns>
    <columns>Number_of_Visitors__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Proposed,Confirmed</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <filters>
        <field>Expected_Arrival__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Bicester Open Group Bookings</label>
    <language>en_US</language>
    <sharedTo>
        <group>Location_Bicester</group>
    </sharedTo>
</ListView>