force-app/main/default/objects/Group_Booking__c/listViews/GoYes_Vacanze.listView-meta.xml
<ListView>
    <fullName>GoYes_Vacanze</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>GoYes Vacanze</label>
    <language>en_US</language>
</ListView>