force-app/main/default/objects/Group_Booking__c/listViews/Group_Data_Migration_Village.listView-meta.xml
<ListView>
    <fullName>Group_Data_Migration_Village</fullName>
    <columns>NAME</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Organisation__c</columns>
    <columns>Status__c</columns>
    <columns>Village__c</columns>
    <columns>Transfer_Redemptions_Now__c</columns>
    <columns>Transfer_Redemptions_on_Go_Live__c</columns>
    <columns>Old_Redemption_Campaign_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>bicester</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group_Booking__c.Groups_Partnership</value>
    </filters>
    <label>Group Data Migration Village</label>
    <language>en_US</language>
</ListView>