force-app/main/default/objects/Group_Booking__c/listViews/Ingolstadt_Open_Group_Bookings.listView-meta.xml
<ListView>
    <fullName>Ingolstadt_Open_Group_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Group_Type__c</columns>
    <columns>Expected_Arrival__c</columns>
    <columns>Visitors_Country_of_Origin__c</columns>
    <columns>Number_of_Visitors_Expected__c</columns>
    <columns>VR_Representative__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Ingolstadt</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group_Booking__c.Group_Booking</value>
    </filters>
    <filters>
        <field>Expected_Arrival__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Ingolstadt Open Group Bookings</label>
    <language>en_US</language>
    <sharedTo>
        <group>Location_Ingolstadt</group>
    </sharedTo>
</ListView>